feat: implement basic todo app functionality

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -14,3 +14,12 @@ a {
 * {
   box-sizing: border-box;
 }
+
+
+.task_name--completed {
+  color: green;
+}
+
+.task_name--uncompleted {
+  color: red
+}
