--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,3 +1,4 @@
+
 html,
 body {
   padding: 0;
@@ -23,3 +24,7 @@ a {
 .task_name--uncompleted {
   color: red
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
